--- a/public/index.html
+++ b/public/index.html
@@ -21,8 +21,11 @@
     <!-- nav CSS -->
     <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
 
-    <!-- nav CSS -->
+    <!-- header CSS -->
     <link rel="stylesheet" href="/styles/header.css" type="text/css" />
+
+    <!-- new-tweet CSS -->
+    <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
 
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
