--- a/public/index.html
+++ b/public/index.html
@@ -72,7 +72,7 @@
         <article class="single-tweet">
           <header>
             <div class="user">
-              <img src="/images/profile-hex.png" style="max-width: 80px">
+              <img src="https://i.imgur.com/73hZDYK.png" style="max-width: 80px">
               <span>Newton</span>
             </div>
             <span class="handle">@SirIsaac</span>
