--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,9 @@
 
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    
+    <!-- timeago to displaying the time passed since a date -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/timeago.js/4.0.2/timeago.min.js" integrity="sha512-SVDh1zH5N9ChofSlNAK43lcNS7lWze6DTVx1JCXH1Tmno+0/1jMpdbR8YDgDUfcUrPp1xyE53G42GFrcM0CMVg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   </head>
 
   <body>
@@ -68,26 +71,7 @@
         </form>
       </section>
       
-      <section id="old-tweets">
-        <article class="single-tweet">
-          <header>
-            <div class="user">
-              <img src="https://i.imgur.com/73hZDYK.png" style="max-width: 80px">
-              <span>Newton</span>
-            </div>
-            <span class="handle">@SirIsaac</span>
-          </header>
-          <p class="show-tweet">If I have seen further it is by standing on the shoulders of giants</p>
-          <footer>
-            <span class="days-since">10 days ago</span>
-            <div class="tweet-icons">
-              <i class="fas fa-flag icon"></i>
-              <i class="fas fa-retweet icon"></i>
-              <i class="fas fa-heart icon"></i>
-            </div>
-          </footer>
-        </article>
-      </section>
+      <section id="tweets-container"></section>
     </main>
 
     <!-- App JS -->
