Remove classes used to id elements since used Sass nesting instead

--- a/public/index.html
+++ b/public/index.html
@@ -44,9 +44,9 @@
     <!-- Top nav bar (fixed) -->
     <nav>
       <span>tweeter</span>
-      <div class="nav-write-tweet">
+      <div>
         <p><strong>Write</strong> a new tweet</p>
-        <i class="fas fa-angle-double-down angle-double"></i>
+        <i class="fas fa-angle-double-down"></i>
       </div>
     </nav>
 
