Change paragraph in nav bar to button, remove button style & add slideDown effect for compose tweet

--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,7 @@
     <nav>
       <span>tweeter</span>
       <div>
-        <p><strong>Write</strong> a new tweet</p>
+        <button id="compose-tweet"><strong>Write</strong> a new tweet</button>
         <i class="fas fa-angle-double-down"></i>
       </div>
     </nav>
