Move HTML code into JS file so compose tweet section initially hidden after page load

--- a/public/index.html
+++ b/public/index.html
@@ -63,18 +63,7 @@
 
       <!-- Page-specific (main) content here -->
       <main class="container">
-        <section class="new-tweet">
-          <h2>Compose Tweet</h2>
-          <p id="alert-msg"></p>
-          <form method="POST" action="/tweets/">
-            <label for="tweet-text">What are you humming about?</label>
-            <textarea name="text" id="tweet-text"></textarea>
-            <div>
-              <button id="submit-tweet" type="submit">Tweet</button>
-              <output name="counter" class="counter" for="tweet-text">140</output>
-            </div>
-          </form>
-        </section>
+        <section class="new-tweet"></section>
         
         <section id="tweets-container"></section>
       </main>
